[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/players/player1/Player1.png" type="Texture" id=1]
[ext_resource path="res://assets/players/player1/dissappearing/Player1_3.png" type="Texture" id=2]
[ext_resource path="res://assets/players/player1/dissappearing/Player1_2.png" type="Texture" id=3]
[ext_resource path="res://assets/players/player1/dissappearing/Player1_1.png" type="Texture" id=4]
[ext_resource path="res://assets/players/player1/dissappearing/Player1_4.png" type="Texture" id=5]
[ext_resource path="res://L1P1.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": false,
"name": "appear",
"speed": 4.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": false,
"name": "vanish",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.7112, 59.8135 )

[node name="P1" type="Area2D"]
script = ExtResource( 6 )

[node name="P1ani" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "appear"

[node name="P1col" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Appear1" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Vanish1" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_P1_body_entered"]
[connection signal="animation_finished" from="P1ani" to="." method="_on_P1ani_animation_finished"]
[connection signal="timeout" from="Appear1" to="." method="_on_Appear1_timeout"]
[connection signal="timeout" from="Vanish1" to="." method="_on_Vanish1_timeout"]
